namespace BusinessLayer.DTOs.Genre;

public class GenreDto
{
    public int Id { get; set; }
    public string Name { get; set; }
}
