namespace DataAccessLayer.Model;

public class Author: BaseEntity
{
    
}