namespace DataAccessLayer.Model;

public class Book : BaseEntity
{
    
}