namespace DataAccessLayer.Model;

public class Cart: BaseEntity
{
    
}