namespace DataAccessLayer.Model;

public class CartItem: BaseEntity
{
    
}