namespace DataAccessLayer.Model;

public class Order: BaseEntity
{
    
}