namespace DataAccessLayer.Model;

public class OrderItem: BaseEntity
{
    
}