namespace DataAccessLayer.Model;

public class Publisher: BaseEntity
{
    
}